--- a/package.json
+++ b/package.json
@@ -21,21 +21,27 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-textract": "^3.306.0",
     "@nestjs/common": "^9.3.12",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.12",
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/swagger": "^6.3.0",
+    "joi": "17.3.0",
     "node-tesseract-ocr": "^2.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "textract": "^2.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^9.3.12",
     "@types/express": "^4.17.8",
+    "@types/textract": "^2.4.2",
     "@types/jest": "^26.0.15",
+    "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
